--- a/jblog03/pom.xml
+++ b/jblog03/pom.xml
@@ -170,12 +170,12 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
-					<plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
 					<url>http://192.168.1.98:8080/manager/text</url>
-					<path>/mysite04</path>
+					<path>/jblog03</path>
 					<username>admin</username>
 					<password>admin</password>
 				</configuration>
